2001-06-03  Christian Stimming  <stimming@tuhh.de>

	* po/de.po: Massive update of the German translation according to
	the finalized glossary. Should be ready for 1.6 by now, pending a
	spellcheck by other translators.

	* po/gnc-glossary.txt: Four more entries added, that's it for now.
	
2001-06-02  Dave Peticolas  <dave@krondo.com>

	* src/gnome/top-level.c (gnc_ui_start_event_loop): remove
	debugging comment

	* src/scm/report/register.scm: fix bugs

	* src/scm/html-utilities.scm: fix bugs

	* src/gnome/window-register.c: fix bugs

	* src/scm/report/price-scatter.scm: same as below

	* src/scm/prefs.scm: same as below

	* src/gnc-ui-util.c: same as below

	* src/gnome/druid-qif-import.c: same as below

	* src/gnome/dialog-price-editor.c: same as below

	* src/gnome/dialog-fincalc.c: same as below

	* src/SplitLedger.c: use gnc_default_currency instead
	of gnc_locale_default_currency.

	* src/scm/options-utilities.scm: use new func

	* src/scm/report/transaction-report.scm: handle splits with no
	account

	* src/gnome/dialog-account.c: use new func

	* src/gnome/window-main-summarybar.c: use new func

	* src/guile/gnc.gwp: wrap new func below

	* src/guile/global-options.c (gnc_default_currency): new func
	to return user-set default currency

	* src/engine/gnc-book.c (gnc_book_backup_file): use g_free
	instead of free.

2001-06-02  Christian Stimming  <stimming@tuhh.de>

	* po/gnc-glossary.txt: Updated glossary, 15 new terms, and lots of
	explanations. Feedback welcome.

2001-06-02  Dave Peticolas  <dave@krondo.com>

	* src/register/gnome/gnucash-date-picker.c (gnc_date_picker_new):
	fix bug

	* src/SplitLedger.c: fix mem leak

	* src/gnome/top-level.c: handle X errors ourselves

2001-06-01  Dave Peticolas  <dave@krondo.com>

	* src/gnc-ui-util.c: use new scanf macro below

	* src/engine/sixtp-dom-parsers.c (string_to_integer): use new
	scanf macro below

	* src/engine/sixtp-utils.c: use new scanf macro below
